Fixed weird letter spacing

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   margin:0;
   padding:0;
   position: relative;
+  font-kerning: none;
 }
 ::selection {
   background: #BCBCBC; /* WebKit/Blink Browsers */
